JDK21対応: Java 21/Gradle 9 対応、Velocity/依存更新、EPUBテンプレートとCSS調整、外字フォント・gaiji manifest修正、narou.rb用途、README/ライセンス/セキュリティ更新、Web取得のレート制限反映